Correct the sandbox and verification guidance for agents
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>